--- a/views/users/new.hbs
+++ b/views/users/new.hbs
@@ -3,8 +3,12 @@
     <legend>New User</legend>
 
     <div class="form-group">
-      <label for="user-username">Username</label>
+      <label for="user-username">Username:</label>
       <input type="text" name="username" class="form-control" id="user-username" placeholder="Username">
+    </div>
+    <div class="form-group">
+      <label for="user-username">Password:</label>
+      <input type="password" name="password" class="form-control" id="user-password" placeholder="Password">
     </div>
 
     <div class="text-right">
