--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -15,8 +15,11 @@
 
 <body>
   <nav class="navbar navbar-dark bg-dark">
+    <div class="navbarlogo navbar-brand">
+      <img class="logo" src="/images/logos/logo.png">
+    </div>
     <div class="navbar-brand">
-      MemeIt!
+      Welcome home!
     </div>
     <div class="navbar-text">
       {{# if currentUserId}}
