Remove everything related to font-awesome and start implementing post-model and routes

--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -19,7 +19,7 @@
       <img class="logo" src="/images/logos/logo.png">
     </div>
     <div class="navbar-brand">
-      Welcome home!
+      Welcome Home!
     </div>
     <div class="navbar-text">
       {{# if currentUserId}}
