--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,10 +1,13 @@
 body {
   padding: 20px;
   font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
+  color: black;
 }
 
 a {
-  color: #00B7FF;
+  color: black;
+  margin-top: 15px;
+  text-decoration: none;
 }
 
 main {
@@ -30,6 +33,17 @@ form {
 .errorlogo {
   height: 20%;
   width: 20%;
+}
+
+.cog {
+  height: 1.2%;
+  width: 1.2%;
+  transition: all .2s ease-in-out;
+}
+
+.cog:hover {
+  transform: scale(1.2);
+  color: white;
 }
 
 /* .navbarlogo {
