--- a/views/rooms/index.hbs
+++ b/views/rooms/index.hbs
@@ -6,7 +6,7 @@
   <ul>
     {{#each rooms as |room|}}
     <li>
-      <a href="/rooms/{{room.id}}">{{room.topic}}</a> | <a href="/rooms/{{room.id}}/edit"></a>
+      <a href="/rooms/{{room.id}}">{{room.topic}}</a> | <a href="/rooms/{{room.id}}/edit"><img class="cog" src="/images/logos/cog.png"></a>
     </li>
     {{/each}}
   </ul>
