Add posts model and integrate posts nested in rooms to inherit the spot. Also make posts-creational routes

--- a/views/rooms/show.hbs
+++ b/views/rooms/show.hbs
@@ -3,5 +3,14 @@
 </div>
 
 <div>
-  Coming soon: posts!
+  {{#each posts as |post|}}
+    <div class="post-div">
+      <h3>{{post.subject}}</h3>
+      <p>{{post.body}}</p>
+    </div>
+  {{/each}}
+</div>
+
+<div>
+  <a href="/rooms/{{room.id}}/posts/new">New Post</a>
 </div>
