add functionality for more links and pictures in posts

--- a/views/rooms/show.hbs
+++ b/views/rooms/show.hbs
@@ -9,6 +9,9 @@
         <div class="card-body">
           <h3 class="card-title text-center">{{post.subject}}</h3>
           <p>{{post.body}}</p>
+          <img src="{{post.img}}" width="200" />
+          <hr>
+          <p><a href="{{post.link}}">{{post.link}}</a></p>
         </div>
 
         <div class="card-footer text-muted text-right">
