--- a/views/posts/new.hbs
+++ b/views/posts/new.hbs
@@ -9,7 +9,18 @@
 
     <div class="form-group">
       <label for="post-body">Body:</label>
-      <input type="text" name="body" class="form-control" id="post-body">
+      <input type="textarea" name="body" class="form-control" id="post-body">
+      
+    </div>
+
+    <div class="form-group">
+      <label for="post-body">Picture-link:</label>
+      <input type="text" name="img" class="form-control" id="post-img">
+    </div>
+
+    <div class="form-group">
+      <label for="post-body">Link:</label>
+      <input type="text" name="link" class="form-control" id="post-link">
     </div>
 
     <div>
