Implement voting feature to comments

--- a/views/posts/new.hbs
+++ b/views/posts/new.hbs
@@ -3,14 +3,13 @@
     <legend>New Post</legend>
 
     <div class="form-group">
-      <label for="post-subject">Subject</label>
+      <label for="post-subject">Subject:</label>
       <input type="text" name="subject" class="form-control" id="post-subject">
     </div>
 
     <div class="form-group">
       <label for="post-body">Body:</label>
-      <input type="textarea" name="body" class="form-control" id="post-body">
-      
+      <textarea type="textarea" name="body" class="form-control" id="post-body exampleFormControlTextarea3" rows="5"></textarea>
     </div>
 
     <div class="form-group">
