--- a/views/rooms/show.hbs
+++ b/views/rooms/show.hbs
@@ -5,32 +5,42 @@
 <div class="row justify-content-center">
   <div class="col-8">
     {{#each posts as |post|}}
-      <div class="card mb-3">
-        <div class="card-body">
-          <h3 class="card-title text-center">{{post.subject}}</h3>
-          <p>{{post.body}}</p>
-          <img src="{{post.img}}" width="200" />
-          <hr>
-          <p><a href="{{post.link}}">{{post.link}}</a></p>
-        </div>
-
-        <div class="card-footer text-muted text-right">
-          <span class="points-span">{{post.points}} points </span>
-
-          <div class="btn-group btn-group-sm">
-            <button type="button" class="btn btn-success">+</button>
-            <button type="button" class="btn btn-danger">-</button>
-          </div>
-        </div>
-
-        
+    <div class="card mb-3">
+      <div class="card-body">
+        <h3 class="card-title text-center">{{post.subject}}</h3>
+        <p>{{post.body}}</p>
+        <img src="{{post.img}}" width="200" />
+        <hr>
+        <p><a href="{{post.link}}">{{post.link}}</a></p>
       </div>
-      <ul>
-        {{#each post.comments as |comment|}}
-          <li>{{comment.body}}</li>
-        {{/each}}
-        <li><a href="/rooms/{{../room.id}}/posts/{{post.id}}/comments/new">New comment</a></li>
-      </ul>
+
+      <div class="card-footer text-muted text-right">
+        <span class="points-span">{{post.points}} points </span>
+
+        <div class="btn-group btn-group-sm">
+          <form action="/rooms/{{post.room}}/posts/{{post.id}}" method="post" class="inline-form">
+            <input type="hidden" name="points" id="post-points" value="-1">
+            <button type="submit" class="downvote-button">-</button>
+          </form>
+
+          <form action="/rooms/{{post.room}}/posts/{{post.id}}" method="post" class="inline-form">
+            <input type="hidden" name="points" id="post-points" value="1">
+            <button type="submit" class="upvote-button">+</button>
+          </form>
+        </div>
+      </div>
+
+
+
+
+    </div>
+    <ul>
+      {{#each post.comments as |comment|}}
+      <li>{{comment.body}}</li>
+      {{/each}}
+      <button class="btn btn-warning"><a href="/rooms/{{../room.id}}/posts/{{post.id}}/comments/new">New
+          comment</a></button>
+    </ul>
 
     {{/each}}
 
@@ -38,5 +48,5 @@
 </div>
 
 <div class="row justify-content-center">
-  <a href="/rooms/{{room.id}}/posts/new">New Post</a>
+  <button class="btn btn-success"><a href="/rooms/{{room.id}}/posts/new">New Post</a></button>
 </div>
