--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -26,6 +26,7 @@
         <a class="nav-link" href="/logout">Logout</a>
       {{else}}
         <a class="nav-link" href="/login">Login</a>
+        <a class="nav-link" href="/users/new">Register</a>
       {{/if}}
     </div>
   </nav>
