--- a/views/users/new.hbs
+++ b/views/users/new.hbs
@@ -1,8 +1,8 @@
 <div>
   <form action="/users" method="post">
-    <legend>New User</legend>
+    <legend>Register a New User!</legend>
 
-    <div class="form-group">
+    <div class="form-group mt-5">
       <label for="user-username">Username:</label>
       <input type="text" name="username" class="form-control" id="user-username" placeholder="Username">
     </div>
@@ -12,7 +12,8 @@
     </div>
 
     <div class="text-right">
-      <button type="submit" class="btn btn-primary">Submit</button>
+      <button type="submit" class="btn btn-primary">Register</button>
     </div>
+    <p class="text-right mt-2"><a href="/login">Already have an account?</a></p>
   </form>
 </div>
