Add more styling and new links to navigate easier around the site!

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -51,6 +51,12 @@ form {
   align-items: flex-end;
 }
 
+.news {
+  border: 1px solid black;
+  width: 40%;
+  padding: 2%;
+}
+
 
 /* .card-footer {
   height: 50px;
