--- a/views/login.hbs
+++ b/views/login.hbs
@@ -1,7 +1,7 @@
 <form action="/login" method="post">
   <legend>Log in!</legend>
 
-  <div class="form-group">
+  <div class="form-group mt-4">
     <label for="user-username">Username:</label>
     <input type="text" name="username" class="form-control" id="user-username" placeholder="Username">
   </div>
@@ -14,4 +14,5 @@
   <div class="text-right">
     <button type="submit" class="btn btn-primary">Log in!</button>
   </div>
+  <p class="text-right mt-2"><a href="/login">Don't have an account?</a></p
 </form>
