--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,2 +1,9 @@
-<h1>{{title}}</h1>
-<p>Hello World!</p>
+<div class="mt-5">
+{{# if user}}
+<h1>Welcome back {{user.username}}!</h1>
+<p class="mt-5 news">Here will be a news section about upcoming changes to the site!</p>
+{{else}}
+<h1>Welcome!</h1>
+<h4 class="mt-3">You need to <a href="/login"><u>Login</u></a> to see the content of this site!</h4>
+{{/if}}
+</div>
