--- a/views/rooms/new.hbs
+++ b/views/rooms/new.hbs
@@ -2,7 +2,7 @@
   <form action="/rooms" method="post">
     <legend>Create a new hangout!</legend>
 
-    <div class="form-group">
+    <div class="form-group mt-5">
       <label for="room-title">Topic:</label>
       <input type="text" name="topic" class="form-control" id="room-topic" placeholder="Topic">
     </div>
