Fix styling of footer, also add styling to all forms

--- a/views/posts/new.hbs
+++ b/views/posts/new.hbs
@@ -1,5 +1,5 @@
 <div>
-  <form action="/rooms/{{room.id}}/posts" method="post">
+  <form action="/rooms/{{room.id}}/posts" method="post" class="snyggForm">
     <legend>New Post</legend>
 
     <div class="form-group">
