--- a/views/rooms/edit.hbs
+++ b/views/rooms/edit.hbs
@@ -1,5 +1,5 @@
 <div>
-  <form action="/rooms/{{room.id}}" method="post">
+  <form action="/rooms/{{room.id}}" method="post" class="snyggForm">
     <legend>Edit Topic!</legend>
 
     <div class="form-group">
