--- a/views/rooms/new.hbs
+++ b/views/rooms/new.hbs
@@ -1,5 +1,5 @@
 <div>
-  <form action="/rooms" method="post">
+  <form action="/rooms" method="post" class="snyggForm">
     <legend>Create a new hangout!</legend>
 
     <div class="form-group mt-5">
