--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -14,7 +14,7 @@ main {
   padding: 1em 2em;
 }
 
-form {
+.snyggForm {
   margin-top: 100px;
   margin-left: 50px;
   max-width: 20em;
@@ -57,11 +57,14 @@ form {
   padding: 2%;
 }
 
+/* .smallgrp {
+  display: flex;
+  justify-content: flex-end;
+  align-items: flex-start;
+}
 
-/* .card-footer {
-  height: 50px;
-} */
-
-/* .ratingButtons {
-  height: 50px;
+.btngrp {
+  display: flex;
+  justify-content: flex-start;
+  align-items: flex-start;
 } */
