--- a/views/login.hbs
+++ b/views/login.hbs
@@ -1,4 +1,4 @@
-<form action="/login" method="post">
+<form action="/login" method="post" class="snyggForm">
   <legend>Log in!</legend>
 
   <div class="form-group mt-4">
