--- a/views/users/new.hbs
+++ b/views/users/new.hbs
@@ -1,5 +1,5 @@
 <div>
-  <form action="/users" method="post">
+  <form action="/users" method="post" class="snyggForm">
     <legend>Register a New User!</legend>
 
     <div class="form-group mt-4">
