Implement profile-view and edit-profile

--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -24,6 +24,7 @@
     <div class="navbar-text d-flex">
 
       <a class="navbar-brand mr-5" href="/">Home</a>
+      <a class="navbar-brand mr-5" href="/users/profile">Profile</a>
       <a class="navbar-brand mr-5" href="/rooms">Rooms</a>
    
       {{# if currentUserId}}
