Add more functionality to edit-profile

--- a/views/users/profile.hbs
+++ b/views/users/profile.hbs
@@ -4,5 +4,5 @@
   <p>From: {{user.location}}</p>
   <p>FB: {{user.facebook}}</p>
   <p>Member since: {{user.createdAt}}</p>
-  <p><a href="/users/profile-edit/">Edit</a></p>
+  <p><a href="/users/profile-edit">Edit</a></p>
 </div>
