--- a/views/users/profile-edit.hbs
+++ b/views/users/profile-edit.hbs
@@ -4,23 +4,23 @@
 
     <div class="form-group mt-4">
       <label for="user-username">First Name:</label>
-      <input type="text" name="firstName" class="form-control" id="user-firstName" placeholder="Username">
+      <input type="text" name="firstName" class="form-control" id="user-firstName" value="{{user.firstName}}">
     </div>
     <div class="form-group">
       <label for="user-username">Lastname:</label>
-      <input type="text" name="lastName" class="form-control" id="user-lastName" placeholder="Password">
+      <input type="text" name="lastName" class="form-control" id="user-lastName" value="{{user.lastName}}">
     </div>
     <div class="form-group">
       <label for="user-username">Location:</label>
-      <input type="text" name="location" class="form-control" id="user-location" placeholder="Password">
+      <input type="text" name="location" class="form-control" id="user-location" value="{{user.location}}">
     </div>
     <div class="form-group">
       <label for="user-username">Facebook:</label>
-      <input type="text" name="facebook" class="form-control" id="user-facebook" placeholder="Password">
+      <input type="text" name="facebook" class="form-control" id="user-facebook" value="{{user.facebook}}">
     </div>
 
     <div class="text-right">
-      <button type="submit" class="btn btn-primary">Edit</button>
+      <button type="submit" class="btn btn-success">Save</button>
     </div>
   </form>
 </div>
