--- a/views/rooms/index.hbs
+++ b/views/rooms/index.hbs
@@ -6,7 +6,7 @@
   <ul class="list-group col-md-4">
   {{#each rooms as |room|}}
   <li class="list-group-item d-flex justify-content-between align-items-center">
-    <span><a href="/rooms/{{room.id}}">{{room.topic}}</a></span><span class="badge badge-success badge-pill">Edit</span></a>
+    <span><a href="/rooms/{{room.id}}">{{room.topic}}</a></span><span class="badge badge-success badge-pill"><a href="/rooms/{{room.id}}/edit">Edit</a></span>
   </li>
   {{/each}}
   </ul>
