Implement admin-functionality, and an admin view. remove displaying users from user route.

--- a/views/users/index.hbs
+++ b/views/users/index.hbs
@@ -1,4 +1,4 @@
-<div>
+{{!-- <div>
   Users
 </div>
 
@@ -6,4 +6,4 @@
   {{#each users as |user|}}
   <li>{{user.username}}</li>
   {{/each}}
-</ul>
+</ul> --}}
