--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -22,7 +22,9 @@
     </div>
     
     <div class="navbar-text d-flex">
-
+      {{# if user.isAdmin}}
+      <a class="navbar-brand mr-5" href="/admin">Admin</a>
+      {{/if}}
       <a class="navbar-brand mr-5" href="/">Home</a>
       <a class="navbar-brand mr-5" href="/users/profile">Profile</a>
       <a class="navbar-brand mr-5" href="/rooms">Rooms</a>
