--- a/views/users/profile.hbs
+++ b/views/users/profile.hbs
@@ -4,5 +4,5 @@
   <p>From: {{user.location}}</p>
   <p>FB: <a href="{{user.facebook}}" target="_blank">Link</a></p>
   <p>Member since: {{user.createdAt}}</p>
-  <p><button class="btn btn-primary btn-sm"><a href="/users/profile-edit">Edit</a></button></p>
+  <a href="/users/profile-edit"><button class="btn btn-primary btn-sm">Edit</button></a>
 </div>
