--- a/views/login.hbs
+++ b/views/login.hbs
@@ -3,7 +3,7 @@
 
   <div class="form-group mt-4">
     <label for="user-username">Username:</label>
-    <input type="text" name="username" class="form-control" id="user-username" placeholder="Username">
+    <input type="text" value="{{user.username}}" name="username" class="form-control" id="user-username" placeholder="Username">
   </div>
 
   <div class="form-group">
