--- a/views/users/profile.hbs
+++ b/views/users/profile.hbs
@@ -1,13 +1,14 @@
-<div class="card-body">
-  <h2 class="card-title mb-4"> {{user.username}}</h2>
+<div>
+  <h2 class="card-title mb-3"> {{user.username}}</h2>
+  <img class="mb-3" src="{{user.picLink}}" width="100" />
   <p>Name: {{user.firstName}} {{user.lastName}}</p>
   <p>From: {{user.location}}</p>
   <p>FB: <a href="{{user.facebook}}" target="_blank">Link</a></p>
   <p>Member since: {{user.createdAt}}</p>
-  <a class="mb-5" href="/users/profile-edit"><button class="btn btn-primary btn-sm">Edit</button></a>
+  <a class="mb-2" href="/users/profile-edit"><button class="btn btn-primary btn-sm">Edit</button></a>
 </div>
 
-  <hr class="mt-5">
+  <hr>
   <div>
   <form class="snyggForm text-right" action="/users/profile-delete" method="post">
   <label for="user-username">Type in your username here if you <b>REALLY</b> want to <b>delete!</b></label>
