Post new post to the right url

--- a/views/comments/new.hbs
+++ b/views/comments/new.hbs
@@ -1,6 +1,6 @@
 <div class="row justify-content-md-center">
   <div class="col-8">
-    <form action="/rooms/{{room.id}}/posts/{{post.id}}/comments" method="post" id="new-comment-form" class="snyggForm">
+    <form action="/posts/{{post.id}}/comments" method="post" id="new-comment-form" class="snyggForm">
       <legend>New Comment</legend>
 
       <div class="form-group">
