--- a/views/posts/show.hbs
+++ b/views/posts/show.hbs
@@ -11,7 +11,7 @@
       </div>
       <div class="card-body">
         <p>{{post.body}}</p>
-        <img src="{{post.img}}" width="200" />
+        <a href="{{post.img}}"><img src="{{post.img}}" width="200" /> </a>
         <hr>
         <p><a href="{{post.link}}" target="_blank">{{post.link}}</a></p>
       </div>
