--- a/views/rooms/index.hbs
+++ b/views/rooms/index.hbs
@@ -1,29 +1,41 @@
-<div class="mt-5 mb-3">
-  <h2>Pick a Room!</h2>
+<div class="mt-3 mb-2 col-md-12 justify-content-center row">
+  <h4>Rooms:</h4>
 </div>
 
-<div class="mb-5">
-  <ul class="list-group col-md-4">
-  {{#each rooms as |room|}}
-  <li class="list-group-item d-flex justify-content-between align-items-center">
-    <span><a href="/rooms/{{room.id}}">{{room.topic}}</a></span><a href="/rooms/{{room.id}}/edit"><span class="badge badge-success badge-pill">Edit</span></a>
-  </li>
-  {{/each}}
+
+<div class="mb-3 col-md-12 justify-content-center row">
+  <ul class="list-group col-md-6">
+    {{#each rooms as |room|}}
+    <div class="column mb-2">
+      <a href="/rooms/{{room.id}}">
+        <li class="list-group-item d-flex justify-content-center">
+          <span><b>{{room.topic}}</b></span>
+        </li>
+      </a>
+    </div>
+    {{/each}}
   </ul>
-
-  <b>
-    <p class="mt-5">Or create a new one <a href="/rooms/new"><u>here!</u></a></p>
-  </b>
-
 </div>
-<div>
-  <h4 class="mt-5 mb-3">Top Posts:</h4>
-  <ul class="list-group col-md-4">
+
+<div class="justify-content-center col-md-12 row">
+  <b>
+    <p class="mt-2">Or create a new one <a href="/rooms/new"><u>here!</u></a></p>
+  </b>
+</div>
+
+<div class="justify-content-center col-md-12 row">
+  <h4 class="mt-2 mb-2">Top Posts:</h4>
+</div>
+
+<div class="col-md-12 justify-content-center row">
+  <ul class="list-group col-md-6">
     {{#each posts as |post|}}
-    <li class="list-group-item d-flex justify-content-between align-items-center">
-      <p><b>{{post.subject}}</b> <i> by: {{post.author}}</i></p>
+    <a href="/rooms/{{room.id}}/posts/show/{{post.id}}">
+    <li class="list-group-item d-flex justify-content-between align-items-center mb-2">
+      <p><b>{{post.subject}}</b> <i> - by: {{post.author}}</i></p>
       <span class="badge badge-primary badge-pill">{{post.points}}</span>
     </li>
+    </a>
     {{/each}}
   </ul>
 </div>
