add hover styling to all li

--- a/views/rooms/index.hbs
+++ b/views/rooms/index.hbs
@@ -8,7 +8,7 @@
     {{#each rooms as |room|}}
     <div class="column mb-2">
       <a href="/rooms/{{room.id}}">
-        <li class="list-group-item d-flex justify-content-center">
+        <li class="list-group-item justify-content-center">
           <span><b>{{room.topic}}</b></span>
         </li>
       </a>
