--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -18,6 +18,15 @@ main {
   padding: 1em 2em;
 }
 
+li {
+  text-decoration: none;
+  transition: background-color 1s ease-in-out
+}
+
+li:hover {
+  background-color: lightgrey;
+}
+
 .snyggForm {
   margin-top: 100px;
   margin-left: 50px;
