--- a/views/rooms/index.hbs
+++ b/views/rooms/index.hbs
@@ -19,7 +19,7 @@
 
 <div class="justify-content-center col-md-12 row">
   <b>
-    <p class="mt-2">Or create a new one <a href="/rooms/new"><u>here!</u></a></p>
+    <p class="mt-2">Or create a new one <u><a href="/rooms/new">here!</a></u></p>
   </b>
 </div>
 
