--- a/views/admin.hbs
+++ b/views/admin.hbs
@@ -1,15 +1,15 @@
 <div class="mt-5">
 {{# if user.isAdmin}}
 <h1>Admin</h1>
-<div>
-  Users
+<div class="mt-3">
+  <h2>Users</h2>
 </div>
 
-<ul>
+<div>
   {{#each users as |user|}}
-  <li>{{user.username}}</li>
+  <p>{{user.username}}</p>
   {{/each}}
-</ul>
+</div>
 {{else}}
 <p>not admin</p>
 {{/if}}
