--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,12 +1,12 @@
 <div class="mt-5">
 {{# if user}}
-<h1 class="mb-5">Welcome back {{user.username}}!</h1>
+<h1 class="mb-5">Hello {{user.username}}!</h1>
 <div class="news">
 <p class="mb-3">Here will be a news section about upcoming changes to the site!</p>
 <p class="mb-3">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
 </div>
 {{else}}
-<h1>Welcome!</h1>
+<h1>Hello!</h1>
 <h4 class="mt-3">You need to <a href="/login"><u>Login</u></a> to see the content of this site!</h4>
 {{/if}}
 </div>
