--- a/views/rooms/index.hbs
+++ b/views/rooms/index.hbs
@@ -4,15 +4,15 @@
 
 
 <div class="mb-3 col-md-12 justify-content-center row">
-  <ul class="list-group col-md-6">
+  <ul class="list-group col-md-4">
     {{#each rooms as |room|}}
-    <div class="column mb-2">
-      <a href="/rooms/{{room.id}}">
-        <li class="list-group-item justify-content-center">
-          <span><b>{{room.topic}}</b></span>
-        </li>
-      </a>
-    </div>
+
+    <a href="/rooms/{{room.id}}">
+      <li class="list-group-item d-flex justify-content-center align-items-center mb-2">
+        <span><b>{{room.topic}}</b></span>
+      </li>
+    </a>
+
     {{/each}}
   </ul>
 </div>
@@ -28,14 +28,16 @@
 </div>
 
 <div class="col-md-12 justify-content-center row">
-  <ul class="list-group col-md-6">
+  <ul class="list-group col-md-4">
     {{#each posts as |post|}}
+
     <a href="/rooms/{{room.id}}/posts/show/{{post.id}}">
-    <li class="list-group-item d-flex justify-content-between align-items-center mb-2">
-      <p><b>{{post.subject}}</b> <i> - by: {{post.author}}</i></p>
-      <span class="badge badge-primary badge-pill">{{post.points}}</span>
-    </li>
+      <li class="list-group-item d-flex justify-content-between align-items-center mb-2">
+        <p><b>{{post.subject}}</b> <i> - by: {{post.author}}</i></p>
+        <span class="badge badge-primary badge-pill">{{post.points}}</span>
+      </li>
     </a>
+    
     {{/each}}
   </ul>
 </div>
