--- a/views/users/profile.hbs
+++ b/views/users/profile.hbs
@@ -1,10 +1,10 @@
 <div>
   <h2 class="card-title mb-3"> {{user.username}}</h2>
   <img class="mb-3" src="{{user.picLink}}" width="100" />
-  <p>Name: {{user.firstName}} {{user.lastName}}</p>
-  <p>From: {{user.location}}</p>
-  <p>FB: <a href="{{user.facebook}}" target="_blank">Link</a></p>
-  <p>Member since: {{user.createdAt}}</p>
+  <p><b>Name:</b> {{user.firstName}} {{user.lastName}}</p>
+  <p><b>From:</b> {{user.location}}</p>
+  <p><b>FB:</b> <a href="{{user.facebook}}" target="_blank">Link</a></p>
+  <p><b>Member since:</b> {{user.createdAt}}</p>
   <a class="mb-2" href="/users/profile-edit"><button class="btn btn-primary btn-sm">Edit</button></a>
 </div>
 
